FC-297 fix: show modal on mobile

--- a/src/components/ui/modal/modal.module.scss
+++ b/src/components/ui/modal/modal.module.scss
@@ -3,7 +3,6 @@
 @import '@radix-ui/colors/mauve.css';
 @import '@radix-ui/colors/violet.css';
 @import 'src/styles/mixins';
-
 /* reset */
 button,
 fieldset,
@@ -55,6 +54,8 @@ input {
     left: 0;
     bottom: 0 ;
     transform: translate(0);
+    animation: none;
+    border-radius: 6px 6px 0 0;
   }
 }
 
@@ -90,6 +91,7 @@ input {
 
   @media (max-width: 767px) {
     padding: 10px;
+    margin-bottom: 50px;
   }
 }
 
